--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@
     content: '';
     height: 3px;
     width: 0;
-    background: rosybrown;
+    background:darkblue;
     position: absolute;
     left: 0;
     bottom: -10px;
